--- a/src/main/resources/META-INF/resources/mantenimiento/tipoCombustible.xhtml
+++ b/src/main/resources/META-INF/resources/mantenimiento/tipoCombustible.xhtml
@@ -1,10 +1,9 @@
 <ui:composition
-        xmlns="http://www.w3.org/1999/xhtml"
         xmlns:h="jakarta.faces.html"
+        xmlns:f="jakarta.faces.core"
         xmlns:ui="jakarta.faces.facelets"
-        xmlns:f="http://java.sun.com/jsf/core"
-        template="../templates/templateMenu.xhtml"
-        xmlns:p="primefaces">
+        xmlns:p="http://primefaces.org/ui"
+        template="../templates/templateMenu.xhtml">
 
     <ui:define name="titulo">
         Tipos de Combustible
@@ -83,7 +82,7 @@
 
                         <f:facet name="header">
                             <p:inputNumber value="#{tipoCombustibleBean.costo}"
-                                           decimalPlaces="2"
+                                           decimalPlaces="6"
                                            placeholder="Costo Ingresar"/>
                             <p:spacer width="10px"/>
                             <p:commandButton value="Agregar"
@@ -124,14 +123,14 @@
                   id="dlgTipoCombustibleId"
                   widgetVar="dlgTipoCombustible"
                   minHeight="40"
-                  width="20%"
+                  width="40%"
                   showEffect="fade"
                   modal="true"
                   closeOnEscape="true">
 
             <h:panelGrid columns="2"
                          id="pnlDatosTipoCombustible"
-                         width="90%">
+                         width="100%">
                 <p:outputLabel value="Nombre"
                                for="txtNombre"
                                styleClass="texto_negrita"/>
@@ -160,6 +159,74 @@
                                        onIcon="pi pi-check"
                                        offIcon="pi pi-times"
                                        value="#{tipoCombustibleBean.tipoCombustible.estado}"/>
+
+                <p:outputLabel value="Impuesto" />
+                <h:panelGrid columns="1"
+                             width="100%">
+                    <p:dataTable var="impuesto"
+                                 rowIndexVar="indexImpuesto"
+                                 value="#{tipoCombustibleBean.tipoCombustible.productoImpuestoTarifaLst}"
+                                 style="width: 100%"
+                                 id="tablaImpuestos"
+                                 emptyMessage="No hay impuesto registrado.">
+
+                        <f:facet name="header">
+                            <h:panelGroup styleClass="botonera-opciones"
+                                          style="width: 100%"
+                                          id="pnlImpuesto">
+                                <p:selectOneMenu id="cmbImpuesto"
+                                                 styleClass="full-width"
+                                                 value="#{tipoCombustibleBean.selectedImpuesto.idImpuesto}"
+                                                 required="true"
+                                                 requiredMessage="Impuesto: Campo obligatorio.">
+                                    <f:selectItem itemLabel="--Seleccione--"
+                                                  noSelectionOption="true"/>
+                                    <f:selectItems value="#{tipoCombustibleBean.listTimpuesto}"
+                                                   var="impuesto"
+                                                   itemLabel="#{impuesto.nombre}"
+                                                   itemValue="#{impuesto.idImpuesto}" />
+                                    <p:ajax event="change"
+                                            listener="#{tipoCombustibleBean.seleccionarImpuesto}"
+                                            update="cmbTarifa"/>
+                                </p:selectOneMenu>
+                                <p:selectOneMenu id="cmbTarifa"
+                                                 styleClass="full-width"
+                                                 value="#{tipoCombustibleBean.selectedImpuestoTarifa.idImpuestoTarifa}"
+                                                 required="true"
+                                                 requiredMessage="Tarifa: Campo obligatorio.">
+                                    <f:selectItem itemLabel="--Seleccione--"
+                                                  noSelectionOption="true"/>
+                                    <f:selectItems value="#{tipoCombustibleBean.selectedImpuesto.impuestoTarifaActivos}"
+                                                   var="tarifa"
+                                                   itemLabel="#{tarifa.descripcion}"
+                                                   itemValue="#{tarifa.idImpuestoTarifa}" />
+                                </p:selectOneMenu>
+                                <p:commandButton value="Agregar"
+                                                 process="@this,pnlImpuesto"
+                                                 update="pnlImpuesto, tablaImpuestos, formulario:grMensajes"
+                                                 icon="pi pi-external-link"
+                                                 actionListener="#{tipoCombustibleBean.agregarImpuesto}"/>
+                            </h:panelGroup>
+                        </f:facet>
+
+                        <p:column headerText="Impuesto">
+                            <h:outputText value="#{impuesto.impuestoTarifa.impuesto.nombre}" />
+                        </p:column>
+
+                        <p:column headerText="Tarifa">
+                            <h:outputText value="#{impuesto.impuestoTarifa.descripcion} / #{impuesto.impuestoTarifa.porcentaje}" />
+                        </p:column>
+
+                        <p:column headerText="Opción"
+                                  width="40"
+                                  style="text-align: center">
+
+                            <p:commandButton  icon="pi pi-trash"
+                                              update="tablaImpuestos"
+                                              actionListener="#{tipoCombustibleBean.eliminarImpuesto(indexImpuesto)}" />
+                        </p:column>
+                    </p:dataTable>
+                </h:panelGrid>
             </h:panelGrid>
             <br/>
             <h:panelGrid columns="3" style="margin: 0 auto">
