--- a/src/main/resources/META-INF/resources/404.xhtml
+++ b/src/main/resources/META-INF/resources/404.xhtml
@@ -3,7 +3,7 @@
       xmlns:p="primefaces">
 
 <h:head>
-    <title>Login</title>
+    <title>403</title>
     <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="mobile-web-app-capable" content="yes"/>
