--- a/src/main/resources/META-INF/resources/mantenimiento/tipoCombustible.xhtml
+++ b/src/main/resources/META-INF/resources/mantenimiento/tipoCombustible.xhtml
@@ -150,7 +150,7 @@
                                  value="#{tipoCombustibleBean.tipoCombustible.tipo}">
                     <f:selectItem itemLabel="-- Seleccionar --" itemValue=""/>
                     <f:selectItem itemLabel="Automotriz" itemValue="1"/>
-                    <f:selectItem itemLabel="Industrial." itemValue="2"/>
+                    <f:selectItem itemLabel="Industrial" itemValue="2"/>
                 </p:selectOneMenu>
 
                 <p:outputLabel value="Estado" />
